Fixed text and minor alignment issues

--- a/src/components/Layout/bootstrap-custom.scss
+++ b/src/components/Layout/bootstrap-custom.scss
@@ -59,6 +59,7 @@ $xl: 1200px; //Extra Large screen start
   border: 0;
   font-weight: 500;
   margin-top: 3%;
+  padding-left: 0%;
 }
 
 .leadership-title{
